Feature - adding gradle run config and mac application packaging.